Fix speed sensor when used in the line tool

There was a misprint in KisConverterPaintingInformationBuilder

BUG:434488